--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "expo-file-system": "~17.0.1",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-symbols": "^0.1.5",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-auto-size-text": "^1.1.1",
+    "react-native-gifted-charts": "^1.4.44",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
   },
